@@ -1,4 +1,4 @@
-﻿zapret v.40
+﻿zapret v.41
 
 English
 -------
@@ -1037,13 +1037,15 @@ stop : rc-service zapret stop
 -----------------
 
 install_easy.sh автоматизирует описанные выше ручные варианты процедур установки.
-Он поддерживает OpenWRT, linux системы на базе systemd и MacOS.
+Он поддерживает OpenWRT, linux системы на базе systemd или openrc и MacOS.
 
 Для более гибкой настройки перед запуском инсталятора следует выполнить раздел "Выбор параметров".
 
-Если система на базе systemd, но используется не поддерживаемый инсталятором менеджер пакетов
+Если система запуска поддерживается, но используется не поддерживаемый инсталятором менеджер пакетов
 или названия пакетов не соответствуют прописанным в инсталятор, пакеты нужно установить вручную.
 Требуется : ipset curl
+
+Для совсем обрезанных дистрибутивов (alpine) требуется отдельно установить iptables и ip6tables.
 
 В комплекте идут статические бинарики для большинства архитектур. Какой-то из них подойдет
 с вероятностью 99%. Но если у вас экзотическая система, инсталятор попробует собрать бинарики сам
