@@ -198,3 +198,7 @@ v40
 
 init scripts : IFACE_LAN, IFACE_WAN now accept multiple interfaces
 init scripts : openwrt uses now OPENWRT_LAN parameter to override incoming interfaces for tpws
+
+v41
+
+install_easy : openrc support
